Updated code to use 'random_bytes' instead of 'mcrypt_create_iv'

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "atelierdisko/coupon_code",
+    "name": "HYP3/coupon_code",
     "description": "PHP library to generate and validate coupon code strings.",
     "keywords": ["coupon", "voucher", "code", "token", "key"],
     "homepage": "https://github.com/atelierdisko/coupon_code",
