--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "HYP3/coupon_code",
+    "name": "atelierdisko/coupon_code",
     "description": "PHP library to generate and validate coupon code strings.",
     "keywords": ["coupon", "voucher", "code", "token", "key"],
     "homepage": "https://github.com/atelierdisko/coupon_code",
@@ -15,9 +15,6 @@
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.0.0"    
-    },
-    "suggest": {
-      "ext-mcrypt": "The mcrypt extension must be installed if /dev/urandom is not available."
     },
     "autoload": {
         "psr-4": { "CouponCode\\": "src/" }
