--- a/composer.json
+++ b/composer.json
@@ -2,19 +2,19 @@
     "name": "atelierdisko/coupon_code",
     "description": "PHP library to generate and validate coupon code strings.",
     "keywords": ["coupon", "voucher", "code", "token", "key"],
-    "homepage": "https://github.com/atelierdisko/coupon_code",
+    "homepage": "https://github.com/mariuswilms/coupon_code",
     "license": "BSD-3-clause",
     "authors": [
         {
-            "name": "Atelier Disko",
-            "homepage": "http://atelierdisko.de"
+            "name": "Marius Wilms",
+            "homepage": "https://mariuswilms.com"
         }
     ],
     "require": {
         "php": ">=5.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=4.0.0"    
+        "phpunit/phpunit": ">=4.0.0"
     },
     "suggest": {
       "ext-mcrypt": "The mcrypt extension must be installed if /dev/urandom is not available."
